# cf-studio

./: .gitignore  .gitmodules  README.md  components.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
changelogs/: changelogs.json  updater.json
scripts/: verify_release.sh
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: commands.toml
src-tauri/src/: cloudflare_auth.rs  d1.rs  db.rs  history.rs  lib.rs  main.rs  r2.rs  setup.rs  user.rs
src/components/: ActivityDashboard.tsx  DatabaseExplorer.tsx  DatabasesView.tsx  EditColumnDialog.tsx  ExportWrapper.tsx  FreeExportDialog.tsx  IntelligencePanel.tsx  Layout.tsx  QueryEditor.tsx  SchemaVisualizer.tsx  SessionRefreshModal.tsx  SettingsView.tsx  SetupWizard.tsx
src/components/ui/: collapsible.tsx  toast.tsx  use-toast.ts
src/hooks/: useCloudflare.ts  useD1Tracker.ts  useQueryExecutor.ts  useUpdater.ts
src/lib/: r2.ts  utils.ts
src/store/: useAppStore.ts
src/utils/: schemaParser.ts
