[package]
name = "cf-studio"
version = "0.1.0"
description = "A blazing-fast native desktop client for Cloudflare D1 and KV"
authors = ["Mubashar Hussain <hello@mubashar.dev>"]
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix avoids name conflicts with the binary crate on Windows.
# See https://github.com/rust-lang/cargo/issues/8519
name = "cf_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

