[package]
name = "cf-studio"
version = "1.0.7"
description = "A blazing-fast native desktop client for Cloudflare D1 and KV"
authors = ["CF Studio"]
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix avoids name conflicts with the binary crate on Windows.
# See https://github.com/rust-lang/cargo/issues/8519
name = "cf_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
pro = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Ergonomic error types
thiserror = "1"

# TOML parsing (for Wrangler config)
toml = "0.8"

# HTTP client — rustls only, no OpenSSL dependency
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
urlencoding = "2"
mime_guess = "2"
chrono = "0.4"

# Cross-platform home/config directory resolution
dirs = "5"

# Async runtime
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "process"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
futures-util = "0.3.32"
async-stream = "0.3.6"
bytes = "1.11.1"
notify = "8.2.0"
